@@ -1,3 +1,9 @@
+2004-03-19	blytkerchan
+	* Makefile: remove
+	* configure.ac: new file
+	* Makefile.am: ditto
+	* bootstrap: ditto
+
 2004-03-03	blytkerchan
 	* README: remove mention of the bug in the algorithm as it is invalid:
 	a short discussion with mr Micheal has shown this..
